# libsecrecy

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
examples/basic/: CMakeLists.txt  README.md  main.cpp
examples/c/basic/: CMakeLists.txt  README.md  main.c
examples/cpp/basic/: CMakeLists.txt  README.md  main.cpp
examples/cpp/cpp_using_c_secrecy/: CMakeLists.txt  README.md  main.cpp
include/: c_secrecy.h  cpp_secrecy.h  secrecy_error.h
src/: c_secrecy.c  c_secrecy.cpp  cpp_secrecy.cpp
tests/c_tests/unit/: CMakeLists.txt
tests/c_tests/unit/include/: test_unit_c_secrecy.h
tests/c_tests/unit/src/: test_unit_c_secrecy.c  test_unit_c_secrecy_char.c  test_unit_c_secrecy_custom_struct.c  test_unit_c_secrecy_error.c  test_unit_c_secrecy_float.c  test_unit_c_secrecy_int.c
tests/cpp_tests/unit/: CMakeLists.txt
tests/cpp_tests/unit/src/: test_unit_cpp_secrecy_custom_struct.cpp  test_unit_cpp_secrecy_int.cpp
tests/unit/: CMakeLists.txt
tests/unit/include/: test_cpp_secrecy.h  test_unit_cpp_secrecy.h
tests/unit/src/: test_cpp_secrecy.cpp  test_cpp_secrecy_array.cpp  test_cpp_secrecy_float.cpp  test_cpp_secrecy_int.cpp  test_cpp_secrecy_string.cpp  test_cpp_secrecy_vector.cpp  test_unit_cpp_secrecy.cpp  test_unit_cpp_secrecy_array.cpp  test_unit_cpp_secrecy_custom_struct.cpp  test_unit_cpp_secrecy_float.cpp  test_unit_cpp_secrecy_string.cpp  test_unit_cpp_secrecy_vector.cpp
